--- a/static/starter-template.css
+++ b/static/starter-template.css
@@ -6,12 +6,12 @@ body {
   text-align: center;
 }
 .container.content{
-    padding: 40px 15px;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+  padding: 40px 15px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .tabs-left > .nav-tabs {
@@ -27,33 +27,30 @@ body {
 .pill-content > .active {
   display: block;
 }
+@media (min-width: 768px ) {
+  .tabs-left > .nav-tabs > li {
+    float: none;
+  }
 
-.tabs-left > .nav-tabs > li,
-.tabs-right > .nav-tabs > li {
-  float: none;
+  .tabs-left > .nav-tabs > li > a { /*Gives tabs height and appearence of facing right*/
+    min-width: 74px;
+    margin-right: 10px;
+    margin-bottom: 3px;
+    height: 150px;
+  }
+
+  .tabs-left > .nav-tabs { /*Gives tab bottom border*/
+    float: left;
+    margin-right: 19px;
+    border-right: 1px solid #ddd;
+  }
+  .tabs-left > .nav-tabs > li > a { /*Gives rounded tab edges*/
+    margin-right: -1px;
+    -webkit-border-radius: 4px 0 0 4px;
+    -moz-border-radius: 4px 0 0 4px;
+    border-radius: 4px 0 0 4px;
+  }
 }
-
-.tabs-left > .nav-tabs > li > a,
-.tabs-right > .nav-tabs > li > a {
-  min-width: 74px;
-  margin-right: 0;
-  margin-bottom: 3px;
-  height: 150px;
-}
-
-.tabs-left > .nav-tabs {
-  float: left;
-  margin-right: 19px;
-  border-right: 1px solid #ddd;
-}
-
-.tabs-left > .nav-tabs > li > a {
-  margin-right: -1px;
-  -webkit-border-radius: 4px 0 0 4px;
-     -moz-border-radius: 4px 0 0 4px;
-          border-radius: 4px 0 0 4px;
-}
-
 .tabs-left > .nav-tabs > li > a:hover,
 .tabs-left > .nav-tabs > li > a:focus {
   border-color: #eeeeee #dddddd #eeeeee #eeeeee;
@@ -64,4 +61,12 @@ body {
 .tabs-left > .nav-tabs .active > a:focus {
   border-color: #ddd transparent #ddd #ddd;
   *border-right-color: #ffffff;
+}
+ /*These classes are for  quick identification of different divs when debugging*/
+.red {
+  background-color:  red;
+}
+
+.blue {
+  background-color:  blue;
 }
