--- a/static/starter-template.css
+++ b/static/starter-template.css
@@ -9,7 +9,7 @@ body {
   padding: 40px 15px;
   width: 100%;
   height: 100%;
-  position: absolute;
+  /*position: absolute;  look at this, see what its affecting. Maybe fixed?*/
   top: 0;
   left: 0;
 }
