edits based on feedback (tabs responsive, header is centered, smaller GitHub Activity

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,30 @@
-body {
-  padding-top: 50px;
-}
-
-.vcenter {
-  display: inline-block;
-  vertical-align: middle;
-  /*float: none;*/
-}
-
 .tabs-left > .nav-tabs {
   border-bottom: 0; /* removes line from bottom tab*/
+}
+
+.nav-tabs>li {
+  float: none;
+}
+
+.flex {
+  display: flex;
+  flex-flow: row wrap;   
+  align-items: center;    
 }
 
 
 /*GREATER THAN sm breakpoint*/
 @media (min-width: 768px ) {
 
+  #Peytons-headshot {      
+    order: 2;
+  }
+  #intro-header {      
+    order: 1;      
+  }
+
   .tabs-left > .nav-tabs > li > a {
-    
+
   }
   /*Gives tab bottom border*/
   .tabs-left > .nav-tabs {
@@ -29,7 +36,7 @@ body {
     -webkit-border-radius: 4px 0 0 4px;
     -moz-border-radius: 4px 0 0 4px;
     border-radius: 4px 0 0 4px;
-    height: 150px;
+    height: 100px;
   }
 
 }
