--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,11 @@ body {
   background-color: #EEEEDD;
   font-family: 'Cabin', sans-serif;
   font-size: 1.5em;
-  /*font-family: 'Vollkorn', sans-serif;*/
-  /*font-family: 'Ubuntu', sans-serif;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
   color:  #2E2E2E;
-  font-family: 'Droid Sans', serif;
+  font-family: 'Droid Sans', sans-serif;
 }
 #wrapper {
   padding-left: 0;
