--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Droid Sans', sans-serif;
 }
 
+#intro-header > h1 {
+  font-family: 'Lato', sans-serif;
+  font-size: 56px;
+}
 /* Sidebar Styles */
 
 .sidebar-nav {
