making resume look nice

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif;
   font-size: 56px;
 }
+
+#panel {
+  padding-top: 5em;
+}
 /* Sidebar Styles */
 
 .sidebar-nav {
@@ -27,9 +31,12 @@ h1, h2, h3, h4, h5, h6 {
   list-style: none;
 }
 
-.sidebar-nav li {
-  text-indent: 20px;
-  line-height: 40px;
+.sidebar-nav li a{
+  margin: 20px;
+}
+
+.sidebar-nav li:first-child {
+  margin-top: 5em;
 }
 
 .sidebar-nav li a {
@@ -68,9 +75,9 @@ h1, h2, h3, h4, h5, h6 {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   display: none;
-  background: #000;
-  background-color:   #EEEEDD;
-  background: rgba(0,0,0,0.2);
+  /*background: #000;*/
+  /*background-color:   #EEEEDD;*/
+  /*background: rgba(0,0,0,0.2);*/
 }
 
 .slideout-panel {
@@ -124,7 +131,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .highlight {
-  background-color: #DDBB99;
+  /*background-color: #DDBB99;*/
 }
 
 .menu-pull {
@@ -208,23 +215,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*RESUME PAGE*/
-  section[role=main] {
+  .resume {
     padding: 21px 0;
     overflow: hidden;
   }
 
-  section[role=main] > div {
+  .resume > div {
     margin-top: 63px;
   }
 
-  section[role=main] h3 {
+  .resume h2 {
     border-bottom: 1px solid #e1e1e1;
     padding: 0 0 20px 60px;
     margin-top: 0px;
     position: relative;
   }
 
-  section[role=main] h3:after, h3:before {
+  .resume h2:after, h2:before {
     content: ' ';
     display: block;
     height: 50px;
@@ -234,33 +241,33 @@ h1, h2, h3, h4, h5, h6 {
     width: 50px;
   }
 
-  section[role=main] h3:before {
+  .resume h2:before {
     background-color: #33a4c9;
     border-radius: 25px;
   }
 
-  .experiences ul, .education ul {
-    margin-left: 60px;
+  ul {
+    list-style: none;
   }
 
-  section[role=main] h4 {
+  .resume h4 {
     margin-bottom: 0px;
   }
 
-  section[role=main] h4 strong {
+  .resume h4 strong {
     color: #147393;
-    font-weight: normal;
+    /*font-weight: normal;*/
   }
 
-  .experiences li, .education li {
+  li {
     margin-bottom: 63px;
   }
 
-  .experiences li:last-child, .education li:last-child {
+  li:last-child {
     margin-bottom: 21px;
   }
 
-  .experiences li p, .education li p {
+  li p {
     margin-left: 30px;
   }
 
