changed layout of menu, deleted old menu code

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,11 +32,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .sidebar-nav li a{
-  margin: 20px;
-}
-
-.sidebar-nav li:first-child {
-  margin-top: 5em;
+  padding: 20px;
 }
 
 .sidebar-nav li a {
@@ -75,9 +71,6 @@ h1, h2, h3, h4, h5, h6 {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   display: none;
-  /*background: #000;*/
-  /*background-color:   #EEEEDD;*/
-  /*background: rgba(0,0,0,0.2);*/
 }
 
 .slideout-panel {
@@ -85,10 +78,10 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 1;
   will-change: transform;
   background-color: #EEEEDD;
+  min-height: 100vh;
   border-left-style:  solid;
   border-left-width: 5px;
   border-left-color: #448877;
-  min-height: 100vh;
 }
 
 .slideout-open,
@@ -140,8 +133,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .menu-pull > p {
-    position: absolute;
-    bottom: 0;
+  position: absolute;
+  bottom: 0;
 }
 
 .highlight  p,
@@ -164,34 +157,22 @@ h1, h2, h3, h4, h5, h6 {
     order: 1;
   }
 
-  .tabs-left > .siderbar> li > a {
-
-  }
-  /*Gives tab bottom border*/
-  .tabs-left > .siderbar{
-    float: left;
-    border-right: 1px solid #ddd;
-  }
-  /*Gives rounded tab edges*/
-  .tabs-left > .siderbar> li > a {
-    -webkit-border-radius: 4px 0 0 4px;
-    -moz-border-radius: 4px 0 0 4px;
-    border-radius: 4px 0 0 4px;
-    height: 22vh;
-  }
-  /*Puts sidebar out on non-mobile devices*/
   .slideout-panel {
     margin-left: 256px;
+    border-left-style:  none;
   }
 
   .slideout-menu {
     display: block;
   }
 
-  .img-burger {
-    display: none;
+  .sidebar-nav {
+    transform: translateY(-50%);
+    top: 50%;
+    border-right-style:  solid;
+    border-right-width: 5px;
+    border-right-color: #448877;
   }
-
 }
 /*LESS THAN md breakpoint*/
 @media (max-width: 992px ) {
@@ -215,85 +196,85 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*RESUME PAGE*/
-  .resume {
-    padding: 21px 0;
-    overflow: hidden;
-  }
+.resume {
+  padding: 21px 0;
+  overflow: hidden;
+}
 
-  .resume > div {
-    margin-top: 63px;
-  }
+.resume > div {
+  margin-top: 63px;
+}
 
-  .resume h2 {
-    border-bottom: 1px solid #e1e1e1;
-    padding: 0 0 20px 60px;
-    margin-top: 0px;
-    position: relative;
-  }
+.resume h2 {
+  border-bottom: 1px solid #e1e1e1;
+  padding: 0 0 20px 60px;
+  margin-top: 0px;
+  position: relative;
+}
 
-  .resume h2:after, h2:before {
-    content: ' ';
-    display: block;
-    height: 50px;
-    left: 0;
-    position: absolute;
-    top: -15px;
-    width: 50px;
-  }
+.resume h2:after, h2:before {
+  content: ' ';
+  display: block;
+  height: 50px;
+  left: 0;
+  position: absolute;
+  top: -15px;
+  width: 50px;
+}
 
-  .resume h2:before {
-    background-color: #33a4c9;
-    border-radius: 25px;
-  }
+.resume h2:before {
+  background-color: #33a4c9;
+  border-radius: 25px;
+}
 
-  ul {
-    list-style: none;
-  }
+ul {
+  list-style: none;
+}
 
-  .resume h4 {
-    margin-bottom: 0px;
-  }
+.resume h4 {
+  margin-bottom: 0px;
+}
 
-  .resume h4 strong {
-    color: #147393;
-    /*font-weight: normal;*/
-  }
+.resume h4 strong {
+  color: #147393;
+  /*font-weight: normal;*/
+}
 
-  li {
-    margin-bottom: 63px;
-  }
+.experiences li {
+  margin-bottom: 63px;
+}
 
-  li:last-child {
-    margin-bottom: 21px;
-  }
+.experiences li:last-child {
+  margin-bottom: 21px;
+}
 
-  li p {
-    margin-left: 30px;
-  }
+.experiences li p {
+  margin-left: 30px;
+}
 
-  .skills .bar li {
-    margin-bottom: 21px;
-    position: relative;
-  }
+.skills .bar li {
+  margin-bottom: 21px;
+  position: relative;
+}
 
-  .skills .bar li:after {
-    background: #e1e1e1;
-    bottom: -4px;
-    content: ' ';
-    display: block;
-    height: 5px;
-    position: absolute;
-    width:100%;
-  }
+.skills .bar li:after {
+  background: #e1e1e1;
+  bottom: -4px;
+  content: ' ';
+  display: block;
+  height: 5px;
+  position: absolute;
+  width:100%;
+}
 
-  .skills .bar li span {
-    background: #33a4c9;
-    bottom: -4px;
-    content: ' ';
-    display: block;
-    height: 5px;
-    left: 0;
-    position: absolute;
-    width: inherit;
-    z-index: 1;
-  }
+.skills .bar li span {
+  background: #33a4c9;
+  bottom: -4px;
+  content: ' ';
+  display: block;
+  height: 5px;
+  left: 0;
+  position: absolute;
+  width: inherit;
+  z-index: 1;
+}
