--- a/css/styles.css
+++ b/css/styles.css
@@ -41,9 +41,9 @@ h1, h2, h3, h4, h5, h6 {
   color: #2E2E2E;
 }
 
-.sidebar-nav li a:hover {
+.sidebar-nav li:hover {
   text-decoration: none;
-  background: rgba(255,255,255,0.8);
+  background-color: #CCDFDA;
 }
 
 .sidebar-nav li a:active,
@@ -123,10 +123,6 @@ h1, h2, h3, h4, h5, h6 {
   height:50px;
 }
 
-.highlight {
-  /*background-color: #DDBB99;*/
-}
-
 .menu-pull {
   background-color: #448877;
   height: 3em;
@@ -135,16 +131,6 @@ h1, h2, h3, h4, h5, h6 {
 .menu-pull > p {
   position: absolute;
   bottom: 0;
-}
-
-.highlight  p,
-.highlight h1,
-.highlight h2,
-.highlight h3,
-.highlight h4,
-.highlight h5,
-.highlight h6 {
-  /*find something that works here?*/
 }
 
 /*GREATER THAN sm breakpoint*/
@@ -277,4 +263,42 @@ ul {
   position: absolute;
   width: inherit;
   z-index: 1;
+}
+
+/*other projects page*/
+#projects-wrapper .row-of-thumbnails{
+ -moz-column-width: 25em;
+ -webkit-column-width: 25em;
+ -moz-column-gap: .5em;
+ -webkit-column-gap: .5em;
+
+}
+
+#projects-wrapper .thumbnail {
+ display: inline-block;
+ margin:  .5em;
+ padding:  0;
+ width:98%;
+ border-style:  solid;
+ border-width: 1px;
+ border-color: #448877;
+}
+
+#projects-wrapper .main-row {
+  padding-bottom: 5em;
+}
+
+.btn{
+ background-color: #448877;
+ border-style: none;
+ color: black;
+}
+
+.btn:hover {
+ background-color: #448877;
+ border-style: none;
+ color: black;
+}
+.btn:hover {
+  background-color: #CCDFDA;
 }
