--- a/css/styles.css
+++ b/css/styles.css
@@ -201,11 +201,11 @@ h1, h2, h3, h4, h5, h6 {
 .resume h2:after, h2:before {
   content: ' ';
   display: block;
-  height: 50px;
-  left: 0;
+  height: 25px;
+  left: 25px;
   position: absolute;
-  top: -15px;
-  width: 50px;
+  top: 3px;
+  width: 25px;
 }
 
 .resume h2:before {
